--- a/client/app/admin/admin.component.html
+++ b/client/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<app-loading [condition]="isLoading"></app-loading>
+<!-- <app-loading [condition]="isLoading"></app-loading>
 
 <app-toast [message]="toast.message"></app-toast>
 
@@ -35,4 +35,47 @@
     </table>
   </div>
 </div>
+ -->
 
+ <nb-layout>
+  <nb-layout-header></nb-layout-header>
+  <nb-layout-column>
+    <nb-accordion>
+      <nb-accordion-item>
+        <nb-accordion-item-header>
+          Product Details
+        </nb-accordion-item-header>
+        <nb-accordion-item-body>
+          A nebula is an interstellar cloud of dust, hydrogen, helium and other ionized gases.
+          Originally, nebula was a name for any diffuse astronomical object,
+          including galaxies beyond the Milky Way.
+        </nb-accordion-item-body>
+      </nb-accordion-item>
+    
+      <nb-accordion-item>
+        <nb-accordion-item-header>
+          Reviews
+        </nb-accordion-item-header>
+        <nb-accordion-item-body>
+          A nebula is an interstellar cloud of dust, hydrogen, helium and other ionized gases.
+          Originally, nebula was a name for any diffuse astronomical object,
+          including galaxies beyond the Milky Way.
+        </nb-accordion-item-body>
+      </nb-accordion-item>
+    
+      <nb-accordion-item disabled="true">
+        <nb-accordion-item-header>
+          Edit
+        </nb-accordion-item-header>
+        <nb-accordion-item-body>
+          A nebula is an interstellar cloud of dust, hydrogen, helium and other ionized gases.
+          Originally, nebula was a name for any diffuse astronomical object,
+          including galaxies beyond the Milky Way.
+        </nb-accordion-item-body>
+      </nb-accordion-item>
+    </nb-accordion>
+  </nb-layout-column>
+  <nb-layout-column></nb-layout-column>
+  <nb-sidebar></nb-sidebar>
+  <nb-layout-footer></nb-layout-footer>
+ </nb-layout>
