admin component created

--- a/client/app/layout/admin-layout/admin-layout.component.html
+++ b/client/app/layout/admin-layout/admin-layout.component.html
@@ -1,3 +1,7 @@
-<p>
-  admin-layout works!
-</p>
+<nb-layout>
+    <nb-layout-header fixed>Admin</nb-layout-header>
+    
+    <nb-layout-column>
+      <button nbButton>Hello World!</button>
+    </nb-layout-column>
+  </nb-layout>
